# ci-hoover

./: CHANGELOG.md  Cargo.toml  README.md  action.yml
.github/workflows/: delete_gen.yml  marketplace.yml  release.yml  rust.yml  self_test.yml
res/: delete_list.ron
src/: main.rs
strace-analysis/: Cargo.toml
strace-analysis/src/: main.rs
