[package]
name = "ci-hoover"
version = "0.1.1"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "ci-hoover will delete stuff you don't want from github actions runners"
repository = "https://github.com/xd009642/ci-hoover"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["ci", "cleanup"]
edition = "2021"

[dependencies]
bytesize = "1.3.0"
envy = "0.4.2"
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
sysinfo = { version = "0.32.0", default-features = false, features = ["multithread", "disk"] }
